# ae-8900

./: README.md  README.org  flake.nix  host.yaml  justfile  session.yaml
backend/: .gitignore  pyproject.toml  requirements.txt
backend/projects/string/: config.yaml
backend/src/: main.py
backend/src/ae8900/: __init__.py  main.py
backend/src/ae8900/data_processing/: __init__.py  daq.py  measurement_callbacks.py
backend/src/ae8900/infrastructure/: __init__.py  connection_management.py  dependencies.py  utils.py
backend/src/ae8900/management/: connection_management.py  dependencies.py  project_management.py
backend/src/ae8900/models/: __init__.py  core.py  websocket.py
backend/src/ae8900/routers/: __init__.py  crud.py  websocket.py
backend/src/data_processing/: daq.py  measurement_callbacks.py
backend/src/management/: __init__.py  connection_management.py  dependencies.py  project_management.py  utils.py
backend/src/models/: core.py
backend/src/routers/: crud.py  websocket.py
backend/src/types/: config.yaml
config/: host.yaml  session.yaml
docs/: notes.org  package-lock.json  proposal.org  timeline.org  week-0.org
frontend/: .eslintrc.cjs  .prettierrc  README.org  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/api/: index.ts  schema.d.ts
frontend/src/lib/assets/: Cubesat_1u.svelte
frontend/src/lib/components/: ThemeToggle.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/static/: cubesat_1u-transformed.glb
(+35 files in other folders)
